--- a/application/khj/view/recharge_amount/index.html
+++ b/application/khj/view/recharge_amount/index.html
@@ -80,7 +80,7 @@
 
                 {if auth("$classuri/del")}
                 <span class="text-explode">|</span>
-                <a data-title="编辑" data-modal='{:url("$classuri/edit")}?id={$vo.id}'>删除</a>
+                <a data-update="{$vo.id}" data-field='delete' data-action='{:url("$classuri/del")}'>删除</a>
                 {/if}
 
             </td>
