--- a/application/khj/view/goods/index.html
+++ b/application/khj/view/goods/index.html
@@ -61,8 +61,8 @@
             <th class='text-left nowrap'>专柜价</th>
             <!--<th class='text-left nowrap'>Appid</th>-->
             <th class='text-left nowrap'>描述</th>
-            <!--<th class='text-left nowrap'>排序</th>-->
-            <!--<th class='text-left nowrap'>首页</th>-->
+            <th class='text-left nowrap'>排序</th>
+            <!-- <th class='text-left nowrap'>首页</th> -->
             <th class='text-left nowrap'>商品状态</th>
             
     	</tr>
