--- a/application/khj/view/goods/edit.html
+++ b/application/khj/view/goods/edit.html
@@ -50,6 +50,13 @@
     </div>
 
     <div class="layui-form-item">
+        <label class="layui-form-label">专柜价</label>
+        <div class="layui-input-block">
+            <input type="text" autofocus name="sale_price" required="required" value={$vo.sale_price} pattern="" title="" placeholder="专柜价" class="layui-input" style="width: 75%;">
+        </div>
+    </div>
+
+    <div class="layui-form-item">
         <label class="layui-form-label">排序</label>
         <div class="layui-input-block">
             <input type="text" autofocus name="order" required="required" value={$vo.order} pattern="" title="" placeholder="排序" class="layui-input" style="width: 75%;">
