--- a/application/khj/view/goods/form.html
+++ b/application/khj/view/goods/form.html
@@ -53,6 +53,13 @@
     </div>
 
     <div class="layui-form-item">
+        <label class="layui-form-label">专柜价</label>
+        <div class="layui-input-block">
+            <input type="text" autofocus name="sale_price" required="required" value="{$vo.sale_price|default=''}" pattern="" title="" placeholder="专柜价" class="layui-input" style="width: 75%;">
+        </div>
+    </div>
+
+    <div class="layui-form-item">
         <label class="layui-form-label">排序</label>
         <div class="layui-input-block">
             <input type="text" autofocus name="order" required="required" value="{$vo.order|default=0}" pattern="" title="" placeholder="排序" class="layui-input" style="width: 75%;">
