--- a/application/khj/view/good_cates/index.html
+++ b/application/khj/view/good_cates/index.html
@@ -19,9 +19,8 @@
     	<thead>
 		<tr>
             <th class='text-left nowrap'>操作</th>
-            <th class='text-left nowrap'>商品类别ID</th>
-            <th class='text-left nowrap'>商品类别名称</th>
-            <th class='text-left nowrap'>商品类别图</th>
+            <th class='text-left nowrap'>商品色号ID</th>
+            <th class='text-left nowrap'>商品色号名称</th>
             <th class='text-left nowrap'>排序</th>
             <th class='text-left nowrap'>状态</th>
             
@@ -41,10 +40,6 @@
             </td>
             <td class='text-left nowrap'>
                 {$vo.cate_name}
-            </td>
-            <td class='text-left nowrap'>
-                <img id="img" data-tips-image style="height:auto;max-height:32px;min-width:32px" src='{$vo.banner}' />
-            
             </td>
             
             <td class='text-left nowrap'>
