--- a/application/khj/view/good_cates/form.html
+++ b/application/khj/view/good_cates/form.html
@@ -1,28 +1,9 @@
 <form class="layui-form layui-box modal-form-box" action="{:request()->url()}" data-auto="true" method="post" style="overflow-y:scroll; height:400px;">
 	<div class="layui-form-item">
-        <label class="layui-form-label">商品类别名称</label>
+        <label class="layui-form-label">商品色号名称</label>
         <div class="layui-input-block">
-            <input type="text" autofocus name="cate_name" required="required" value='' pattern="" title="" placeholder="请输入商品类别名称" class="layui-input" style="width: 75%;">
+            <input type="text" autofocus name="cate_name" required="required" value='' pattern="" title="" placeholder="请输入商品色号名称" class="layui-input" style="width: 75%;">
         </div>
-    </div>
-    <div class="layui-form-item">
-        <label class="layui-form-label">上传图片</label>
-        <div class="layui-input-block">
-            <div class="layui-row">
-                <div class="layui-col-md6">
-                    <input type="text" autofocus id="path" name="banner" required="required" value='{$vo.banner|default=""}' pattern="" title="图片地址" placeholder="图片地址" class="layui-input">
-                </div>
-                <div class="layui-col-md3">
-                    <div class="layui-upload" style="margin-left: 20px;">
-                        <button type="button" class="layui-btn" id="test1">上传图片</button>
-                    </div>
-                </div>
-                <div class="layui-col-md3">
-                    <img id="img" data-tips-image style="height:auto;max-height:32px;min-width:32px" src='{$vo.path|default=""}' />
-                </div>
-            </div>
-        </div>
-        
     </div>
 
     <div class="layui-form-item">
@@ -53,33 +34,5 @@
         <button class="layui-btn layui-btn-danger" type='button' data-confirm="确定要取消编辑吗？" data-close>取消编辑</button>
     </div>
     <script>window.form.render();</script>
-    <script type="text/javascript">
-        
-        layui.use('upload', function(){
-            var $ = layui.jquery
-            ,upload = layui.upload;
 
-            var uploadInst = upload.render({
-                elem: '#test1' //绑定元素
-                ,url: '/admin/img/upload' //上传接口
-                ,method: 'post'
-                ,exts : 'jpg|png|gif'
-                ,done: function(res){
-                    if(res.code == 1){
-                        $("#path").val(res.path);
-                        $("#size").val(res.size);
-                        $("#type").val(res.type);
-                        $("#img").attr('src', res.path);
-                        layui.alert('图片已经上传到网宿云存储', {icon: 6});
-
-                    }else if(res.code == 0){
-                        layui.alert(res.msg);
-                    }else{
-                        layui.alert(res.error_msg);
-                    }
-                }
-            });
-        });
-
-    </script>
 </form>
