--- a/application/khj/view/goods/form.html
+++ b/application/khj/view/goods/form.html
@@ -6,11 +6,11 @@
         </div>
     </div>
     <div class="layui-form-item">
-        <label class="layui-form-label">所属分类</label>
+        <label class="layui-form-label">所属色号</label>
         <div style="width: 35%;" class="layui-input-block">
             <select id="cate" lay-filter="type" name="cate" class="layui-select" >
 
-                <option value="">- 请选择分类 -</option>
+                <option value="">- 请选择色号 -</option>
 
                 <!--{foreach $cates as $key=>$st}-->
                 <!--{if (isset($vo['cate']) AND $vo.cate eq $st.id)}-->
