--- a/application/khj/view/goods/add_pics.html
+++ b/application/khj/view/goods/add_pics.html
@@ -67,7 +67,7 @@
              $('.del').click(function(){
                   var productId = $(this).val();
                  
-                  $.get("/bxdj/goods/del_pic?productId="+productId, function(result){
+                  $.get("/khj/goods/del_pic?productId="+productId, function(result){
                          if(result == 'success'){
 
                             alert('删除图片成功');
