--- a/public/static/kouhongji/index/index.css
+++ b/public/static/kouhongji/index/index.css
@@ -1,7 +1,10 @@
 body{
     background:#fef2f6;
     position: relative;
-    height: auto;
+}
+.body{
+    height: 100%;
+    overflow: auto;
 }
 .topbg{
     width:100%;
@@ -9,9 +12,9 @@ body{
     padding-top: 0.3rem;
     background: url("../image/bg.png") no-repeat;
     background-size:100% 100%;
-    position: absolute;
-    top:0;
-    left:0;
+}
+.topbg.blur{
+    filter:blur(10px);
 }
 .toptit{
     position: relative;
@@ -148,4 +151,37 @@ body{
 .footer .tit{
     height:0.56rem;
     line-height:0.56rem;
+}
+.rule{
+    background-color:hsla(0, 0%, 100%, 0.4);
+    width:100%;
+    height:100%;
+    position:fixed;
+    top:0;
+    left:0;
+}
+.rule .bg{
+    position: absolute;;
+    top:50%;
+    left:50%;
+    transform:translate(-50%, -50%);
+    width:88%;
+    padding:0.3rem 3%;
+    background:#fff;
+    border-radius:5px;
+    box-shadow: 0px 2px 8px #fda3bd;
+}
+.rule .close{
+    position:absolute;
+    top:0.1rem;
+    right:0.3rem;
+    font-size:0.5rem;
+}
+.rule .list{
+    width:100%;
+    height:auto;
+    line-height:0.4rem;
+    font-size:0.3rem;
+    font-weight:600;
+    color:#000;
 }
