--- a/application/kouhongji/view/index/index.html
+++ b/application/kouhongji/view/index/index.html
@@ -64,5 +64,9 @@
 </body>
 
 </html>
+<script type="text/javascript">
+  var user_id = "{$user_id}";
+  console.log(user_id);
+</script>>
 <script src="__STATIC__/kouhongji/index/index.js"></script>
 <link rel="stylesheet" href="__STATIC__/kouhongji/index/index.css">
