--- a/application/kouhongji/view/index/index.html
+++ b/application/kouhongji/view/index/index.html
@@ -66,6 +66,10 @@
 </html>
 <script type="text/javascript">
   var user_id = "{$user_id}";
+  var last_login = "{$last_login}";
+  var openid = "{$openid}";
+  var user_status = "{$user_status}";
+  var money = "{$money}";
   console.log(user_id);
 </script>>
 <script src="__STATIC__/kouhongji/index/index.js"></script>
