--- a/public/static/kouhongji/base/app.css
+++ b/public/static/kouhongji/base/app.css
@@ -28,3 +28,20 @@ a {text-decoration: none; }
   -webkit-box-orient: vertical;
   word-break: break-all;
 }
+.loading{
+  position: fixed;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
+  background: rgba(0, 0, 0, 0.6);
+}
+.loading img{
+  position: absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  width: 0.72rem;
+  height: 0.72rem;
+}
