--- a/public/static/kouhongji/user/user.css
+++ b/public/static/kouhongji/user/user.css
@@ -44,13 +44,13 @@ body{
     flex-direction:row;
     align-items:center;
 }
-.money .left,.money .right{
+.money .li{
     display:flex;
     flex-direction:column;
     align-items:center;
     font-size: 0.28rem;
 }
-.money>div:nth-child(2){
+.money>div:nth-child(2),.money>div:nth-child(4){
     height:0.6rem;
     border-right:0.02rem solid #fc6cab;
 }
@@ -73,6 +73,9 @@ body{
 .mycoin{
     font-size:0.5rem;
     margin-right: 0.1rem;
+}
+.mycoin.ys{
+    font-size: 0.36rem;
 }
 .order{
     background:none;
