--- a/public/static/kouhongji/base/app.css
+++ b/public/static/kouhongji/base/app.css
@@ -35,7 +35,16 @@ a {text-decoration: none; }
   width: 100%;
   height: 100%;
   z-index: 10000;
+}
+.loading .bg{
+  position: absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%,-50%);
   background: rgba(0, 0, 0, 0.6);
+  width: 1.4rem;
+  height: 1.4rem;
+  border-radius:5px;
 }
 .loading img{
   position: absolute;
@@ -44,4 +53,7 @@ a {text-decoration: none; }
   transform: translate(-50%,-50%);
   width: 0.72rem;
   height: 0.72rem;
+}
+[v-cloak] {
+  display: none;
 }
