--- a/public/static/kouhongji/index/index.css
+++ b/public/static/kouhongji/index/index.css
@@ -152,7 +152,7 @@ body{
     height:0.56rem;
     line-height:0.56rem;
 }
-.rule{
+.tk{
     background-color:hsla(0, 0%, 100%, 0.4);
     width:100%;
     height:100%;
@@ -160,7 +160,7 @@ body{
     top:0;
     left:0;
 }
-.rule .bg{
+.tk .rule{
     position: absolute;;
     top:50%;
     left:50%;
@@ -184,4 +184,44 @@ body{
     font-size:0.3rem;
     font-weight:600;
     color:#000;
+}
+.tk .balance{
+    position: absolute;;
+    top:50%;
+    left:50%;
+    transform:translate(-50%, -50%);
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    width:66%;
+    padding:0.3rem 3%;
+    background:#fff;
+    border-radius:5px;
+    box-shadow:3px 3px 3px #fda3bd;
+}
+.balance .close{
+    position:absolute;
+    top:15px;
+    right:15px;
+    font-size:20px;
+}
+.balance img{
+    width:3.4rem;
+    margin-bottom:0.3rem;
+    height: 2.8rem;
+}
+.balance .leave {
+    color:#fb1f7f;
+    font-size: 0.28rem;
+}
+.balance .payBtn {
+    font-size:0.3rem;
+    color:#fff;
+    background:#fb1f7f;
+    height:0.8rem;
+    line-height:0.8rem;
+    border-radius:40px;
+    width:56%;
+    margin-top:0.3rem;
+    text-align:center;
 }
