--- a/application/kouhongji/view/index/index.html
+++ b/application/kouhongji/view/index/index.html
@@ -10,7 +10,7 @@
   <title>我要赢口红</title>
   <script src="__STATIC__/kouhongji/base/base.js?v={:time()}"></script>
   <link rel="stylesheet" href="__STATIC__/kouhongji/index/index.css?v={:time()}">
-  <script src="http://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
+  <script src="https://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
 </head>
 
 <body>
