--- a/application/kouhongji/view/game/index.html
+++ b/application/kouhongji/view/game/index.html
@@ -10,18 +10,18 @@ $orderId = $_GET['orderId'];
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title></title>
-    <link rel="stylesheet" href="__STATIC__/kouhongji/game/game.cssv={:time()}">
+    <link rel="stylesheet" href="__STATIC__/kouhongji/game/game.css?v={:time()}">
     <script type="text/javascript" src="__STATIC__/kouhongji/game/bodymovin.js"></script>
     <script type="text/javascript" src="__STATIC__/kouhongji/game/jweixin-1.3.2.js"></script>
     <script typet="text/javascript" src="__STATIC__/kouhongji/game/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="__STATIC__/kouhongji/game/jquery.cookie.js"></script>
     <script type="text/javascript" src="__STATIC__/kouhongji/game/JicemoonMobileTouch.js"></script>
     <?php if($game==1){?>
-    <script type="text/javascript" src="__STATIC__/kouhongji/game/HardestGame1.jsv={:time()}"></script>
-    <script type="text/javascript" src="__STATIC__/kouhongji/game/index1.jsv={:time()}"></script>
+    <script type="text/javascript" src="__STATIC__/kouhongji/game/HardestGame1.js?v={:time()}"></script>
+    <script type="text/javascript" src="__STATIC__/kouhongji/game/index1.js?v={:time()}"></script>
     <?php }elseif($game==2){ ?>
-    <script type="text/javascript" src="__STATIC__/kouhongji/game/HardestGame.jsv={:time()}"></script>
-    <script type="text/javascript" src="__STATIC__/kouhongji/game/index.jsv={:time()}"></script>
+    <script type="text/javascript" src="__STATIC__/kouhongji/game/HardestGame.js?v={:time()}"></script>
+    <script type="text/javascript" src="__STATIC__/kouhongji/game/index.js?v={:time()}"></script>
     <?php } ?>
 </head>
 <body>
