--- a/application/kouhongji/view/game/index.html
+++ b/application/kouhongji/view/game/index.html
@@ -2,6 +2,7 @@
 <?php
 $game = $_GET['game'];
 $orderId = $_GET['orderId'];
+$goods_id = $_GET['goods_id'];
 ?>
 <!DOCTYPE html>
 <html lang="en" style="font-size: 79.5424px;"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
