--- a/application/kouhongji/view/index/index.html
+++ b/application/kouhongji/view/index/index.html
@@ -41,6 +41,7 @@
           <div class="btn">{{item.price}}元闯关购</div>
         </div>
       </div>
+      <div class="tryBtn" @click="tryGame"><img src="__STATIC__/kouhongji/image/try.png" ></div>
       <div class="footer">
         <div class="tabbar">
           <img src="__STATIC__/kouhongji/image/order.png"></image>
