--- a/public/static/kouhongji/user/user.css
+++ b/public/static/kouhongji/user/user.css
@@ -133,3 +133,10 @@ body{
     height:0.56rem;
     line-height:0.56rem;
 }
+#myCanvas{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top:0;
+    left:-100%;
+}
