--- a/application/kouhongji/view/user/user.html
+++ b/application/kouhongji/view/user/user.html
@@ -72,6 +72,7 @@
             <div class="bg"><img src="__STATIC__/kouhongji/image/loading.gif"></div>
         </div>
         <canvas id="myCanvas"></canvas>
+        <image class="qrcodeImg" :src="posterImg" v-if="posterImgShow" @click="closeImg"></image>
     </div>
 </body>
 
