--- a/public/static/kouhongji/user/user.css
+++ b/public/static/kouhongji/user/user.css
@@ -140,3 +140,10 @@ body{
     top:0;
     left:-100%;
 }
+.qrcodeImg{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top:0;
+    left:0;
+}
