--- a/application/kouhongji/view/index/index.html
+++ b/application/kouhongji/view/index/index.html
@@ -22,7 +22,7 @@
         </div>
         <image class="music-img" @click="musicSet" :src="musicOn?'__STATIC__/kouhongji/image/voice.png':'__STATIC__/kouhongji/image/closevoice.png'"></image>
         <div class="audioBox">
-            <audio src="https://khj.wqop2018.com/game/audio/bgm.mp3" id="bgMusic" loop="true"></audio>
+            <audio src="https://khj.wqop2018.com/game/audio/bgm.mp3" id="bgMusic" loop="true" autoplay="autoplay"></audio>
         </div>
       </div>
       <img src="__STATIC__/kouhongji/image/banner.png" class="banner">
