--- a/application/kouhongji/view/user/user.html
+++ b/application/kouhongji/view/user/user.html
@@ -7,7 +7,7 @@
     <meta HTTP-EQUIV="pragma" CONTENT="no-cache">
     <meta HTTP-EQUIV="Cache-Control" CONTENT="no-cache, must-revalidate">
     <meta HTTP-EQUIV="expires" CONTENT="0">
-    <title>个人中心1</title>
+    <title>个人中心</title>
     <script src="__STATIC__/kouhongji/base/base.js?v={:time()}"></script>
     <link rel="stylesheet" href="__STATIC__/kouhongji/user/user.css?v={:time()}">
     <script src="https://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
@@ -45,8 +45,8 @@
                         </div>
                 </div>
             </div>
-            <div class="order">
-                <div>我的订单</div>
+            <div class="order" @click="goOrder">
+                <div>我的挑战</div>
                 <image src="__STATIC__/kouhongji/image/right.png"></image>
             </div>
             <div class="order" @click="codePoster">
