--- a/application/kouhongji/view/user/user.html
+++ b/application/kouhongji/view/user/user.html
@@ -53,8 +53,8 @@
                 <div>我的海报</div>
                 <image src="__STATIC__/kouhongji/image/right.png"></image>
             </div>
-            <div class="order">
-                <div>获取地址</div>
+            <div class="order" @click="tixian">
+                <div>佣金提现</div>
                 <image src="__STATIC__/kouhongji/image/right.png"></image>
             </div>
             <div class="footer">
