--- a/application/kouhongji/view/tixian/tixian.html
+++ b/application/kouhongji/view/tixian/tixian.html
@@ -34,6 +34,7 @@
                 <div class='txt'>点击下方复制单号提现</div>
                 <div class='no1'>
                     <div class='con'>{{orderNo}}</div>
+                    <input type="text" v-model="orderNo" class="orderInput">
                     <div class='fuzhi_btn' @click='fuzhi'>复制单号</div>
                 </div>
                 <image class='close' src='https://txcdn.ylll111.xyz/hzttk/tixian_close.png' @click='closeTk'></image>
